MessageService 고도화 작업 구현